prevent images from stretching in livechat

--- a/src/components/live-chat/live-chat.scss
+++ b/src/components/live-chat/live-chat.scss
@@ -89,6 +89,7 @@
         @extend .circular-border;
 
         .image {
+          object-fit: cover;
           height: 32px;
           width: 32px;
           margin-right: 8px;
